[project]
name = "tipgstac"
description = "A PgSTAC Backend for TiPG."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "PgSTAC",
    "STAC",
    "OGC Features",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "tipg",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "pypgstac",
]

[project.urls]
Homepage = "https://developmentseed.org/tipg-stac/"
Documentation = "https://developmentseed.org/tipg-stac/"
Issues = "https://github.com/developmentseed/tipg-stac/issues"
Source = "https://github.com/developmentseed/tipg-stac"
Changelog = "https://developmentseed.org/tipg-stac/release-notes/"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "file"
path = "tipgstac/__init__.py"

[tool.pdm.build]
includes = ["tipgstac"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]
