[project]
name = "tipgstac"
description = "A PgSTAC Backend for TiPG."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
license = {text = "MIT"}
keywords = [
    "PgSTAC",
    "STAC",
    "OGC Features API",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "tipg>=0.6,<0.7",
    "aiocache",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-pgsql",
    "pytest-asyncio",
    "pytest-benchmark",
    "httpx",
    "psycopg2",
    "sqlalchemy>=1.1,<1.4",
    "pypgstac==0.8.4",
    "psycopg[binary,pool]",
]
dev = [
    "pre-commit",
]
server = [
    "uvicorn[standard]>=0.12.0,<0.19.0",
]

[project.urls]
Homepage = "https://developmentseed.org/tipg-stac/"
Documentation = "https://developmentseed.org/tipg-stac/"
Issues = "https://github.com/developmentseed/tipg-stac/issues"
Source = "https://github.com/developmentseed/tipg-stac"
Changelog = "https://developmentseed.org/tipg-stac/release-notes/"

# While we use TIPG github
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "tipgstac/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  "/dockerfiles",
  "/docs",
  "/data",
  "docker-compose.yml",
  "CONTRIBUTING.md",
  "CHANGES.md",
  ".pytest_cache",
  ".github",
  ".bumpversion.cfg",
  ".env.example",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
known_first_party = ["tipg", "tipgstac"]
known_third_party = ["fastapi", "buildpg", "pydantic"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
